fix: Adjusts submenu font size on mobile

--- a/wp-content/themes/tool-box/sass/layout/_site-header.scss
+++ b/wp-content/themes/tool-box/sass/layout/_site-header.scss
@@ -260,18 +260,19 @@
         .dropdown-menu {
           border: none;
           display: block;
-          padding-left: 25px;
+          padding-left: 20px;
           position: relative;
           width: 100%;
+          padding-top: 0;
+          margin-bottom: 10px;
 
-          .navbar-nav__item {
+          .sidebar-nav__item {
             display: block;
 
             a {
               display: block;
-              font-weight: 300;
-              text-transform: capitalize;
-              @include font-size(16);
+              @include font-size(14);
+              padding: 8px 0 8px 0;
             }
           }
         }
